# tripwork

./: .gitignore  .version-bump.json  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  gemini-extension.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.kimi-plugin/: plugin.json
.opencode/: INSTALL.md
hooks/: hooks-codex.json  hooks-cursor.json  run-hook.cmd  session-start
schemas/: accommodations.schema.json  advisory.schema.json  calendar.schema.json  candidates.schema.json  cost.schema.json  gate-report.schema.json  itinerary.schema.json  legs.schema.json  routing.schema.json  seasonal.schema.json  stage-state.schema.json  transit.schema.json  trip-brief.schema.json  verified-pois-media.schema.json  verified-pois.schema.json
scripts/: booking.py  bump_version.py  calendar.py  cost.py  distance.py  export_gate.py  facilities.py  gate.py  geocode.py  geocode_cache.py  hours.py  legs.py  media_merge.py  orchestration.py  photo_adapter.py  season.py  text_hygiene.py  transit.py  verify.py
tests/: conftest.py  e2e_fixtures.py  test_agent_context_files.py  test_alt_platform_descriptors.py  test_bump_version.py  test_calendar.py  test_cost.py  test_defects_2026_06_21.py  test_description_hygiene.py  test_distance.py  test_e2e_accommodation.py  test_e2e_calendar.py  test_e2e_cost.py  test_e2e_cross_stage.py  test_e2e_defects_all9.py  test_e2e_export.py  test_e2e_gate_wave1.py  test_e2e_gmaps_deadlink.py  test_e2e_hokkaido_dogfood.py  test_e2e_legs.py  test_gate.py  (+33 more)
(+34 files in other folders)
